--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.93"
 csv = "1.3.1"
+regex = "1.5.4"
+
+[[bin]]
+name = "day01"
+path = "src/bin/day01.rs"
+
+[[bin]]
+name = "day02"
+path = "src/bin/day02.rs"
